# sortable

./: LICENSE  README.md  THOUGHT_PROCESS.md  pyproject.toml
examples/: example.py
sortable/: __init__.py  core.py
