[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sortable"
version = "0.1.0"
description = "A Python abstract base class to simplify creating sortable objects, similar to functools.total_ordering."
authors = [
    { name = "Jeffery Spirko" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://example.com/sortable"

[tool.setuptools.packages.find]
where = ["."]
